--- a/mcferkincaht.cabal
+++ b/mcferkincaht.cabal
@@ -22,5 +22,5 @@ test-suite specs
   build-depends:       base                == 4.5.*
                      , text                == 0.11.*
                      , mtl                 == 2.1.*
-                     , hspec               == 1.3.*
-                     , hspec-expectations  == 0.3.*
+                     , hspec               >= 1.3
+                     , hspec-expectations  >= 0.3
