--- a/mcferkincaht.cabal
+++ b/mcferkincaht.cabal
@@ -12,6 +12,8 @@ build-type: Simple
 executable program1
   build-depends:       base                == 4.5.*
   main-is: Server.hs
+  ghc-options:
+    -Wall -Werror
   hs-source-dirs: src
 
 test-suite specs
@@ -19,6 +21,8 @@ test-suite specs
   hs-source-dirs:     src
                     , spec
   main-is:             Spec.hs
+  ghc-options:
+    -Wall -Werror
   build-depends:       base                == 4.5.*
                      , text                == 0.11.*
                      , mtl                 == 2.1.*
