--- a/mcferkincaht.cabal
+++ b/mcferkincaht.cabal
@@ -11,7 +11,8 @@ build-type: Simple
 
 executable program1
   build-depends:       base                == 4.5.*
-  main-is: Server.hs
+                     , network             >= 2.3
+  main-is: Main.hs
   ghc-options:
     -Wall -Werror
   hs-source-dirs: src
@@ -28,3 +29,4 @@ test-suite specs
                      , mtl                 == 2.1.*
                      , hspec               >= 1.3
                      , hspec-expectations  >= 0.3
+                     , network             >= 2.3
